Reader Mode triggers after tab crash

After a tab crashes, the IPC pipe is invalidated. This removes the
binding to create the receiving end of the distillability service.
This change re-adds the binding after each navigation event.

BUG=603673

Review URL: https://codereview.chromium.org/1883023004

Cr-Commit-Position: refs/heads/master@{#387798}

Former-commit-id: a5e2d57e31704b582b35eaf4577850ba97d0b9e2